--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 packaging==21.0
 pillow>=10.0.1
-pip==23.1.2
+pip>=23.3
 protobuf==3.18.3
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
