--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ six==1.15.0
 sqlparse==0.4.4
 toml==0.10.1
 Unidecode==1.3.6
-urllib3==1.26.5
+urllib3>=1.26.18
 virtualenv==20.0.23
 webencodings==0.5.1
 wheel==0.38.1
