--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ python-bidi==0.4.2
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==6.0.1
-requests==2.31.0
+requests>=2.32.0
 requests-oauthlib==1.3.1
 rsa==4.7.2
 s3transfer==0.6.0
